manifests/k8s/chat-service.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solvex-chat-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solvex-chat
  template:
    metadata:
      labels:
        app: solvex-chat
    spec:
      containers:
      - image: fazalahamed628774/chat-service:latest
        name: solvex-chat
---
apiVersion: v1
kind: Service
metadata:
  name: solvex-chat-srv
spec:
  selector:
    app: solvex-chat
  ports:
  - protocol: TCP
    port: 3006
    targetPort: 3006
